// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FkThumbnail FkThumbnails renders with buttons & matches snapshot 1`] = `
<div>
  <div
    class="fk-thumbnail is-displayed"
    style="max-width: 204px;"
  >
    <div
      class="fk-thumbnail__header"
    >
      <label
        class="fk-thumbnail__label fk-thumbnail__label--unassociated"
        title="USRK P"
      >
        USRK P
      </label>
      <span
        class="fk-thumbnail__buttons"
      >
        <button
          class="bp5-button bp5-small bp5-intent-success fk-thumbnail__accept fk-thumbnail__accept--non-interactive"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp5-icon bp5-icon-confirm"
          >
            <svg
              data-icon="confirm"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.7 4.29a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l2 2c.18.18.43.29.71.29s.53-.11.71-.29l5-5a1.003 1.003 0 00-1.42-1.42l-4.29 4.3L8.7 4.29zm5.22 3.01c.03.23.07.45.07.69 0 3.31-2.69 6-6 6s-6-2.69-6-6 2.69-6 6-6c.81 0 1.59.17 2.3.46l1.5-1.5A7.998 7.998 0 00-.01 7.99c0 4.42 3.58 8 8 8s8-3.58 8-8c0-.83-.13-1.64-.36-2.39l-1.71 1.7z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="bp5-button bp5-small"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp5-icon bp5-icon-cross"
          >
            <svg
              data-icon="cross"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </div>
    <canvas
      class="fk-thumbnail__content"
      data-testid="fk-thumbnail"
      height="200"
      width="200"
    />
  </div>
</div>
`;

exports[`FkThumbnail FkThumbnails renders without buttons & matches snapshot 1`] = `
<div>
  <div
    class="fk-thumbnail is-displayed"
    style="max-width: 204px;"
  >
    <div
      class="fk-thumbnail__header"
    >
      <label
        class="fk-thumbnail__label fk-thumbnail__label--unassociated"
        title="USRK P"
      >
        USRK P
      </label>
    </div>
    <canvas
      class="fk-thumbnail__content"
      data-testid="fk-thumbnail"
      height="200"
      width="200"
    />
  </div>
</div>
`;
